Add All Changes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
         {% endfor %}
     </ul>
 
-    <a href="{{ url_for('upload_project') }}">Upload New Project</a>
-    <a href="{{ url_for('upload_certification') }}">Upload New Certification</a>
+    <a href="{{ url_for('main.upload_project') }}">Upload New Project</a>
+    <a href="{{ url_for('main.upload_certification') }}">Upload New Certification</a>
 </body>
 </html>
