--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Philemon's Portfolio</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Portfolio - Home{% endblock %}
+
+{% block content %}
     <h1>Welcome to My Portfolio</h1>
 
     <h2>Projects</h2>
@@ -22,7 +19,20 @@
         {% endfor %}
     </ul>
 
+    
     <a href="{{ url_for('main.upload_project') }}">Upload New Project</a>
     <a href="{{ url_for('main.upload_certification') }}">Upload New Certification</a>
-</body>
-</html>
+
+   <!-- Wave separator -->
+<!-- Wave separator -->
+<!-- <div class="wave-container"></div>
+  -->
+
+  <!-- Wave separator -->
+<div class="wave"></div>
+
+
+{% endblock %}
+
+
+
