--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,5 +28,7 @@
     </div>
      <!-- Include JavaScript files -->
      <script src="{{ url_for('static', filename='js/typewriter.js') }}"></script>
+     <script src="{{ url_for('static', filename='js/counting.js') }}"></script>
+
 </body>
 </html>
