--- a/app/templates/profile_base.html
+++ b/app/templates/profile_base.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Portfolio Page - Philemon{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/profile_styles.css') }}">
+
 
 </head>
 
@@ -19,20 +21,12 @@
             <li><a href="{{ url_for('main.projects') }}">Projects</a></li>
             <li><a href="{{ url_for('main.certifications') }}">Certifications</a></li>
             <li><a href="{{ url_for('main.blog') }}">Blog</a></li>
+            <li><a href="{{ url_for('auth.logout') }}" class="logout">Logout</a></li>
         </ul>
     </nav>
 
     <!-- Main Content -->
     <div class="container">
-        {% with messages = get_flashed_messages(with_categories=True) %}
-        {% if messages %}
-        <ul class="flashes">
-            {% for category, message in messages %}
-            <li class="{{ category }}">{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
 
         {% block content %}
         <!-- Each page will insert its content here -->
