--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -69,12 +69,8 @@
 </div>
 
 <div class="scrolling-tunnel-statement">
-    <p>Call me on: 0728992182</p>
+    <p>Let's Get in Touch. Call Me on: +254741103341;   Email Me at: victorphilemon001@gmail.com;   WhatsApp Me at: +254741103341 ...   Thank You ...</p>
 </div>
-
-
-
-
 
 
 {% endblock %}
