commit modified file

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
             <li><a href="{{ url_for('main.about') }}">About</a></li>
             <li><a href="{{ url_for('main.projects') }}">Projects</a></li>
             <li><a href="{{ url_for('main.certifications') }}">Certifications</a></li>
-            <li><a href="{{ url_for('main.blog') }}">Blog</a></li>
+            <li><a href="https://phil-blog.onrender.com/">Blog</a></li>
         </ul>
     </nav>
 
